--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ header h1 {
     border-radius: 1rem;
     padding: 1rem;
     border: none;
-    flex: 1;
+    width: 100%;
     font-size: 1.6rem;
 }
 
@@ -131,7 +131,7 @@ header h1 {
 }
 
 .formulario select {
-    flex: 1;
+    width: 100%;
     padding: 1rem;
     border: none;
     border-radius: 1rem;
@@ -154,8 +154,6 @@ header h1 {
     border-left: 5px solid #b91c1c;
     color: #b91c1c;
 }
-
-.alerta.success {}
 
 .contenedor {
     width: 90%;
@@ -255,8 +253,12 @@ main {
 
 .filtros .campo {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
+}
+
+.filtros .campo label {
+    margin-bottom: 2rem;
 }
 
 .filtros label {
@@ -266,7 +268,7 @@ main {
 }
 
 .filtros select {
-    flex: 1;
+    width: 100%;
     padding: 1rem;
     border: none;
     border-radius: 1rem;
@@ -290,14 +292,23 @@ main {
 
 .gasto {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
+    flex-direction: column;
     margin-bottom: 2rem;
     width: 100%;
 }
 
+@media (min-width: 768px) {
+    .gasto {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+}
+
 .cantidad-gasto {
+    text-align: center;
     font-size: 2.4rem;
     color: #ca0000;
     font-weight: 900;
@@ -305,12 +316,30 @@ main {
 
 .contenido-gasto {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+    .contenido-gasto {
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+        justify-content: space-between;
+    }
 }
 
 .contenido-gasto img {
-    width: 10rem;
+    width: 18rem;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .contenido-gasto img {
+        width: 10rem;
+        margin-bottom: 0rem;
+    }
 }
 
 .descripcion-gasto p {
@@ -319,7 +348,7 @@ main {
 
 .descripcion-gasto .categoria {
     color: var(--gris);
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: 900;
     text-transform: uppercase;
 }
@@ -385,7 +414,7 @@ main {
 
 .modal .formulario {
     max-width: 80rem;
-    width: 40rem;
+    /* width: 40rem; */
     transition-property: all;
     transition-duration: 300ms;
     transition-timing-function: ease-in;
