--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 :root {
-    --azul: #3b82f6;
+    --morado: #7002ff;
+    --azul: #397ae2;
     --blanco: #ffffff;
-    --gris-claro: #f5f5f5;
-    --gris: #94a3b8;
-    --gris-oscuro: #64748b;
+    --gris-claro: #e6e6e6;
+    --gris: #90a2bb;
+    --gris-oscuro: #606f85;
     --negro: #000;
 }
 
@@ -33,6 +34,10 @@ h1 {
     font-size: 4rem;
 }
 
+.titulo {
+    text-transform: capitalize;
+}
+
 h2 {
     font-size: 3rem;
 }
@@ -47,7 +52,7 @@ h2 {
 }
 
 header {
-    background-color: var(--azul);
+    background-color: var(--morado);
 }
 
 header h1 {
@@ -209,7 +214,7 @@ header h1 {
     font-weight: 400;
     color: var(--gris-oscuro);
     font-size: 2.4rem;
-    text-align: center;
+    text-align: left;
 }
 
 @media (min-width: 768px) {
@@ -308,10 +313,11 @@ main {
 }
 
 .cantidad-gasto {
-    text-align: center;
+    text-align: left;
     font-size: 2.4rem;
-    color: #ca0000;
+    color: #2c9c00;
     font-weight: 900;
+    margin: 0;
 }
 
 .contenido-gasto {
@@ -325,13 +331,13 @@ main {
     .contenido-gasto {
         flex-direction: row;
         align-items: center;
-        gap: 2rem;
+        gap: 4rem;
         justify-content: space-between;
     }
 }
 
 .contenido-gasto img {
-    width: 18rem;
+    width: 12rem;
     margin-bottom: 2rem;
 }
 
@@ -342,8 +348,22 @@ main {
     }
 }
 
+.descripcion-gasto {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .descripcion-gasto {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .descripcion-gasto p {
     margin: 0 0 0.3rem 0;
+    margin-bottom: 1rem;
 }
 
 .descripcion-gasto .categoria {
@@ -351,10 +371,7 @@ main {
     font-size: 2rem;
     font-weight: 900;
     text-transform: uppercase;
-}
-
-.descripcion-gasto p {
-    margin-bottom: 1rem;
+    margin-right: 2rem;
 }
 
 .descripcion-gasto .nombre-gasto {
@@ -379,12 +396,25 @@ main {
 
 .nuevo-gasto {
     position: fixed;
-    bottom: 5rem;
-    right: 5rem;
+    bottom: 2.5rem;
+    right: 2.5rem;
+    transition-duration: 1s;
+}
+
+@media (min-width: 768px) {
+    .nuevo-gasto {
+        bottom: 4rem;
+        right: 4rem;
+    }
+}
+
+.nuevo-gasto:hover {
+    transform: scale(1.3);
 }
 
 .nuevo-gasto img {
-    width: 5rem;
+    width: 6rem;
+    transition: all;
 }
 
 .nuevo-gasto img:hover {
